--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  font-family: "Arial", sans-serif;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
